Closed Bug 586711 Opened 14 years ago Closed 14 years ago

Incubator embedding requires switching to XRE_InitEmbedding2

Categories

(Core Graveyard :: Embedding: APIs, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: tatiana, Unassigned)

References

Details

Attachments

(2 files)

User-Agent:       Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.2.8) Gecko/20100723 Ubuntu/10.04 (lucid) Firefox/3.6.8
Build Identifier: 

due to bug #568691 xulrunner 2 changes incubator embedding needs to use XRE_InitEmbedding2 API

Reproducible: Always
Blocks: 583546
Attachment #465300 - Flags: review?(benjamin)
Comment on attachment 465300 [details] [diff] [review]
switching to XRE_InitEmbedding2

I am not the maintainer of the new embedding API.
Attachment #465300 - Flags: review?(benjamin)
Attachment #465300 - Flags: review?(mark.finkle)
Attachment #465300 - Flags: feedback?(romaxa)
Comment on attachment 465300 [details] [diff] [review]
switching to XRE_InitEmbedding2


>     // init embedding
>-    rv = XRE_InitEmbedding(xuldir, appdir,
>-                           const_cast<MozEmbedDirectoryProvider*>(&kDirectoryProvider),
>-                           aComps, aNumComps);
>+    rv = XRE_InitEmbedding2(xuldir, appdir,
>+                           const_cast<MozEmbedDirectoryProvider*>(&kDirectoryProvider));
>     if (NS_FAILED(rv)) {
>         cerr << "XRE_InitEmbedding failed." << endl;

Change the cerr string?

>diff -r 1cc6a4df693b -r 03cdcef7e2ea common/EmbeddingSetup.h

>  * @param aProfilePath Optional argument to set the path where
>  *  profile data is stored. The directory will be created if it
>  *  doesn't exist.
>  * @param aComps Optional argument to register static
>  *  components at startup.
>  * @param aNumComps Optional argument to set number of
>  *  static components.
>  */
>-nsresult InitEmbedding(const char* aProfilePath = 0, 
>-                       const nsStaticModuleInfo* aComps = 0, 
>-                       int aNumComps = 0);

Remove "aComps" and "aNumComps" from the comments

r+ but post a new patch with the nits fixed
Attachment #465300 - Flags: review?(mark.finkle) → review+
Whiteboard: [embed-checkin-needed]
Comment on attachment 465300 [details] [diff] [review]
switching to XRE_InitEmbedding2

simple switch, looks fine
Attachment #465300 - Flags: feedback?(romaxa) → feedback+
http://hg.mozilla.org/incubator/embedding/rev/07985cf307db
Status: UNCONFIRMED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [embed-checkin-needed]
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: