Bug 586711 - Incubator embedding requires switching to XRE_InitEmbedding2. r=mark.finkle